--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ankora-front-end-test",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,7 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "standard": "^16.0.3",
+    "standard-version": "^9.3.1",
     "styled": "^1.0.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
